# cppQtAvroPhonetic

./: CMakeLists.txt  README.md  main.cpp
data/: avrophonetic.json
src/: avrophonetic.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/libengine/: FileSystem.cpp  FileSystem.h  Log.h
test/: avrophonetic.h  test.h
